<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friday_time"
            android:textColor="#000"
            android:text="@string/time"
            android:textSize="15sp"
            android:layout_marginStart="10dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Semi"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:textColor="#000"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friday_event"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:text="@string/event" />


    </LinearLayout>
