<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarcolor">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/editprofile"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/toolbar"
        android:layout_marginStart="15dp"
        android:background="@null"
        android:text="@string/save"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/firstname"
                android:textColor="@color/background"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="10dp"
                android:text="@string/lastname"
                android:textColor="@color/background"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputprofilefirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/profile_firstname"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1.5"
                        android:autofillHints=""
                        android:background="@drawable/activity_background"
                        android:hint="@string/enter_firstname"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColorHint="#fff" />

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputprofilelastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/profile_lastname"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/activity_background"
                        android:hint="@string/enter_lastname"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColorHint="#fff" />

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/background"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputprofile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/activity_background"
                    android:textColorHint="#fff"
                    android:hint="@string/enter_email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="#e7e7e7"
                    android:textSize="20sp"
                    android:autofillHints="Enter your Email" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/mobile_number"
            android:textColor="@color/background"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputprofilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/profile_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/activity_background"
                    android:hint="@string/enter_mobile_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColorHint="#fff" />

            </LinearLayout>


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</RelativeLayout>
